--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/file-input": "^4.0.0",
     "@angular/animations": "^9.1.11",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.7",
