--- a/angular.json
+++ b/angular.json
@@ -31,14 +31,12 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "src/assets/tableCss.css",
               "node_modules/@swimlane/ngx-datatable/index.scss",
               "node_modules/@swimlane/ngx-datatable/themes/material.scss",
               "node_modules/@swimlane/ngx-datatable/assets/icons.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/tableScript.js"
             ]
           },
           "configurations": {
@@ -103,14 +101,12 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "src/assets/tableCss.css",
               "node_modules/@swimlane/ngx-datatable/index.scss",
               "node_modules/@swimlane/ngx-datatable/themes/material.scss",
               "node_modules/@swimlane/ngx-datatable/assets/icons.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/tableScript.js"
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           }
         },
