--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "prettier.tabWidth": 5,
-    "prettier.printWidth": 120
+    "prettier.tabWidth": 4,
+    "prettier.printWidth": 120,
+    "prettier.useTabs": true
 }
