--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
+            "extractCss": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -33,10 +34,11 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/@swimlane/ngx-datatable/index.scss",
               "node_modules/@swimlane/ngx-datatable/themes/material.scss",
-              "node_modules/@swimlane/ngx-datatable/assets/icons.css"
+              "node_modules/@swimlane/ngx-datatable/assets/icons.css",
+              "node_modules/animate.css/animate.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
@@ -103,7 +105,8 @@
               "src/styles.scss",
               "node_modules/@swimlane/ngx-datatable/index.scss",
               "node_modules/@swimlane/ngx-datatable/themes/material.scss",
-              "node_modules/@swimlane/ngx-datatable/assets/icons.css"
+              "node_modules/@swimlane/ngx-datatable/assets/icons.css",
+              "node_modules/animate.css/animate.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js"
