--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@swimlane/ngx-datatable": "^17.0.0",
     "@types/jquery": "^3.3.38",
+    "animate.css": "^4.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "jwt-decode": "^2.2.0",
     "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
